2002-02-11  Seth Nickell  <snickell@stanford.edu>

	* NEWS:
	* configure.in:

	Release 1.9.7
	
2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* modules/vfolder-desktop-method.c:
	(invalidate_folder_T): impl lock taken version.
	(invalidate_folder): split out subfolder stuff to
	(invalidate_folder_subfolders): here.
	(do_close): use _T here to avoid deadlock.

2002-02-09  Darin Adler  <darin@bentspoon.com>

	* libgnomevfs/gnome-vfs-file-info.h: Oops. Missed that inode
	numbers also are 64 bits when _FILE_OFFSET_BITS=64.

2002-02-09  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Darin Adler <darin@bentspoon.com>

	* configure.in: check for bzlib.h, bomb if it's not there
	* modules/Makefile.am: use BZ2_LIBS and CDDA_LIBS defines

2002-02-09  Jon K Hellan  <hellan@acm.org>

	* configure.in: s/OPENSSL_LDFLAGS/OPENSSL_LIBS/

2002-02-09  Darin Adler  <darin@bentspoon.com>

	Fix some 64-bit problems by setting flags properly.

	* libgnomevfs/Makefile.am:
	* modules/Makefile.am:
	GNOME_VFS_CONFDIR -> SYSCONFDIR
	GNOME_VFS_DATADIR -> DATADIR
	GNOME_VFS_PREFIX -> PREFIX
	Define _FILE_OFFSET_BITS=64; needed to get large file
	sizes from stat.
	Define _BSD_SOURCE; previous defined in some source files,
	but it does no harm to define it consistently.
	Define _LARGEFILE64_SOURCE; previously defined in some
	source files, but affects the stat structure, so needs to
	be consistent across more files.

	* libgnomevfs/gnome-vfs-application-registry.c:
	(gnome_vfs_application_registry_init): GNOME_VFS_DATADIR -> DATADIR
	* libgnomevfs/gnome-vfs-mime-info.c: (gnome_vfs_mime_init):
	GNOME_VFS_DATADIR -> DATADIR
	* libgnomevfs/gnome-vfs-mime-magic.c: Remove the _BSD_SOURCE define
	now that it's handled on the command line.
	(gnome_vfs_mime_get_magic_table): GNOME_VFS_CONFDIR -> SYSCONFDIR
	* libgnomevfs/gnome-vfs-mime.c: (mime_init): GNOME_VFS_DATADIR ->
	DATADIR
	* libgnomevfs/gnome-vfs-module-shared.c: Remove the _BSD_SOURCE and